--- a/python-school/data_files/1-lines.ipynb
+++ b/python-school/data_files/1-lines.ipynb
@@ -205,7 +205,7 @@
     "id": "wzyIGFfP5bPd"
    },
    "source": [
-    "**✪ 1.1 EXERCISE**: Try to rewrite here the block we've just seen, and execute the cell by pressing Control-Enter. Rewrite the code with the fingers, not with copy-paste ! Pay attention to correct indentation with spaces in the block."
+    "**✪ 1.1 EXERCISE**: Try to rewrite here the block we've just seen, but this time printing the first two lines. Rewrite the code with the fingers, not with copy-paste! Pay attention to correct indentation with spaces in the block."
    ]
   },
   {
@@ -215,7 +215,7 @@
     "id": "0zsZD7-N5bPo"
    },
    "source": [
-    "**✪ 1.2 EXERCISE**: you might be wondering what exactly is that `f`, and what exactly the method `readlines` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
+    "**✪ 1.2 EXERCISE**: you might be wondering what exactly is that `f`, and what exactly the method `readline` should be doing. When you find yourself in these situations, you might help yourself with functions `type` and `help`. This time, directly copy paste the same code here, but insert inside `with` block the commands:\n",
     "\n",
     "* `print(type(f))`\n",
     "* `help(f)`\n",
@@ -468,6 +468,77 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Writing in the file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want instead to *write* into a file, you should specify it from the moment you `open` it, using `\"w\"` as a second argument, like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/people-simple-new.txt\", \"w\") as f:\n",
+    "    f.write(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We passed the content of this new file to `f.write()`, which is here an empty string.\n",
+    "Now let's read this file to check everything went correctly:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data/people-simple-new.txt\", \"r\") as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's an empty string indeed!\n",
+    "\n",
+    "```{warning}\n",
+    "Always check that the path you're writing to does not point to an existing file that you'd like to keep!\n",
+    "Otherwise you'll completely overwrite it, thus losing data!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**✪✪ 1.5 EXERCISE**: As above, get the full name of each historical character, but instead of printing it, store it into a list.\n",
+    "Then use this list to write a new file `data/people-simple-new.txt`, containing on each line the full name of a historical character.\n",
+    "Check things went as planned by reading in the file after writing to it.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "6pP7nWFc5bQ4"
@@ -592,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -610,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -632,7 +703,7 @@
        "'5'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -665,7 +736,7 @@
        "5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -720,7 +791,7 @@
        "'abHELLOe'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "autoexec": {
@@ -781,7 +852,7 @@
        "'bbbb'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
