--- a/python-school/data_files/3-json.ipynb
+++ b/python-school/data_files/3-json.ipynb
@@ -47,13 +47,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'str'>\n",
       "{\"name\": [\"Grazioli\", \"Pressano\", \"Stazione RFI\"], \"address\": [\"Piazza Grazioli - Lavis\", \"Piazza della Croce - Pressano\", \"Via Stazione - Lavis\"], \"id\": [\"Grazioli - Lavis\", \"Pressano - Lavis\", \"Stazione RFI - Lavis\"], \"bikes\": [3, 2, 4], \"slots\": [7, 5, 6], \"totalSlots\": [10, 7, 10], \"position\": [[46.139732902099794, 11.111516155225331], [46.15368174037716, 11.106601229430453], [46.148180371138814, 11.096753997622727]]}\n"
      ]
     }
    ],
    "source": [
     "with open('data/bike-sharing-lavis-single.json') as f:\n",
-    "    print(f.read())"
+    "    json_content = f.read()\n",
+    "    print(type(json_content))\n",
+    "    print(json_content)"
    ]
   },
   {
@@ -95,6 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'dict'>\n",
       "{'address': ['Piazza Grazioli - Lavis',\n",
       "             'Piazza della Croce - Pressano',\n",
       "             'Via Stazione - Lavis'],\n",
@@ -113,6 +117,7 @@
     "with open('data/bike-sharing-lavis-single.json') as f:\n",
     "    python_content = json.load(f)\n",
     "    \n",
+    "print(type(python_content))\n",
     "pprint(python_content)"
    ]
   },
@@ -121,26 +126,6 @@
    "metadata": {},
    "source": [
     "Notice that what we've just read with the function `json.load` is not simple text anymore, but Python objects. For this json, the most external object is a dictionary (note the curly brackets at the file beginning and end). We can check using `type` on `python_content`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(python_content)"
    ]
   },
   {
@@ -159,13 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'list'>\n",
       "[{'address': 'Piazza Grazioli - Lavis',\n",
       "  'bikes': 3,\n",
       "  'id': 'Grazioli - Lavis',\n",
@@ -193,35 +179,9 @@
    "source": [
     "with open('data/bike-sharing-lavis.json') as f:\n",
     "    python_content = json.load(f)\n",
-    "    \n",
+    "\n",
+    "print(type(python_content))\n",
     "pprint(python_content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this json, the most external object is a list (note the square brackets at the file beginning and end). We can check using `type` on `python_content`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(python_content)"
    ]
   },
   {
@@ -233,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +208,7 @@
        " 'position': [46.139732902099794, 11.111516155225331]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +235,7 @@
        "'Piazza Grazioli - Lavis'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +262,7 @@
        "[46.139732902099794, 11.111516155225331]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
