--- a/python-school/mixed-structures/1-nested-structures.ipynb
+++ b/python-school/mixed-structures/1-nested-structures.ipynb
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "✪ **EXERCISE**: Implement the function `esrowf` which RETURNS the `i`-th row from `mat` as a NEW list.\n",
+    "✪ **EXERCISE**: Implement the function `extrowf` which RETURNS the `i`-th row from `mat` as a NEW list.\n",
     "\n",
     "* **NOTE**: To create a new list use a for cycle which iterates over the elements, _not_ the indices (so don't use range!)"
    ]
@@ -627,9 +627,9 @@
    "source": [
     "### Matrices with default values\n",
     "\n",
-    "✪✪ There are several ways to create a new empty `n` x `n` matrix as lists of lists which contains zeros.\n",
+    "✪✪ There are several ways to create a new empty `n` x `m` matrix as lists of lists which contains zeros.\n",
     "\n",
-    "Implement `empty_matrix`, which returns a new `n` x `n` matrix as a list of lists filled with zeroes\n",
+    "Implement `empty_matrix`, which returns a new `n` x `m` matrix as a list of lists filled with zeroes\n",
     "\n",
     "* use two nested `for` cycles:"
    ]
