--- a/python-school/numpy/1-basics.ipynb
+++ b/python-school/numpy/1-basics.ipynb
@@ -1280,6 +1280,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c6f9f4f",
+   "metadata": {},
+   "source": [
+    "Note that this is different from `data.reshape(data.shape[::-1])`: the latter keeps the order of the elements reading from left to right and top to bottom, while transposing transforms rows into columns, thus switching the two dimensions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "86c3c7e3",
    "metadata": {},
    "source": [
