--- a/python-school/numpy/2-exercises.ipynb
+++ b/python-school/numpy/2-exercises.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "418ebe6c",
    "metadata": {},
    "outputs": [],
@@ -32,85 +32,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed055f1b",
-   "metadata": {},
-   "source": [
-    "### frame\n",
-    "\n",
-    "✪✪✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`\n",
-    "\n",
-    "Ingredients:\n",
-    "\n",
-    "- create a matrix filled with zeros. ATTENTION: which dimensions does it have? Do you need `n` or `k` ? Read WELL the text.\n",
-    "\n",
-    "For this first version, try filling the rows and columns using `for in range` and writing directly in the single cells\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "id": "4a2e2c52",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[7., 7., 7., 7.],\n",
-       "       [7., 0., 0., 7.],\n",
-       "       [7., 0., 0., 7.],\n",
-       "       [7., 7., 7., 7.]])"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frame(4, 7.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "d6800873",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expected_mat = np.array(\n",
-    "    [\n",
-    "        [7.0, 7.0, 7.0, 7.0],\n",
-    "        [7.0, 0.0, 0.0, 7.0],\n",
-    "        [7.0, 0.0, 0.0, 7.0],\n",
-    "        [7.0, 7.0, 7.0, 7.0],\n",
-    "    ]\n",
-    ")\n",
-    "# all_close return True if all the values in the first matrix are close enough\n",
-    "# (that is, within a given tolerance) to corresponding values in the second\n",
-    "assert np.allclose(frame(4, 7.0), expected_mat)\n",
-    "\n",
-    "expected_mat = np.array([[7.0]])\n",
-    "assert np.allclose(frame(1, 7.0), expected_mat)\n",
-    "\n",
-    "expected_mat = np.array([[7.0, 7.0], [7.0, 7.0]])\n",
-    "assert np.allclose(frame(2, 7.0), expected_mat)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e7098066",
    "metadata": {},
    "source": [
     "## Exercise - frameslices\n",
     "\n",
-    "✪✪✪ Solve the precious exercise, this time **using 4 slices**\n",
+    "✪✪✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`.\n",
     "\n",
-    "- **DO NOT** use `for` nor `while` loops\n"
+    "**DO NOT** use `for` nor `while` loops, use slices!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "id": "520cc7e6",
    "metadata": {},
    "outputs": [],
@@ -149,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "id": "b82986ce",
    "metadata": {},
    "outputs": [],
@@ -220,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "id": "bd2c03eb",
    "metadata": {},
    "outputs": [],
@@ -266,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "id": "a4b91dab",
    "metadata": {},
    "outputs": [
@@ -279,7 +213,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "id": "33914c3a",
    "metadata": {},
    "outputs": [],
@@ -368,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "id": "45ef88e6",
    "metadata": {},
    "outputs": [
@@ -380,7 +314,7 @@
        "       [7., 1., 7., 9.]])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "id": "601aec0e",
    "metadata": {},
    "outputs": [],
@@ -439,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "id": "2f55e469",
    "metadata": {},
    "outputs": [
@@ -453,7 +387,7 @@
        "       [12.,  6.,  8.,  6.]])"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "id": "37f73ce5",
    "metadata": {},
    "outputs": [],
@@ -512,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 18,
    "id": "be1a3636",
    "metadata": {},
    "outputs": [
@@ -525,7 +459,7 @@
        "       [0., 1., 0., 1.]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 19,
    "id": "4c1468cc",
    "metadata": {},
    "outputs": [],
@@ -575,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 21,
    "id": "d1c1bcec",
    "metadata": {},
    "outputs": [
@@ -588,7 +522,7 @@
        "       [10., 16.,  9.,  6.]])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 22,
    "id": "06b42a97",
    "metadata": {},
    "outputs": [],
@@ -661,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 24,
    "id": "448a1362",
    "metadata": {},
    "outputs": [],
@@ -709,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 26,
    "id": "e59011b7",
    "metadata": {},
    "outputs": [],
@@ -745,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 28,
    "id": "bf004029",
    "metadata": {},
    "outputs": [
@@ -755,7 +689,7 @@
        "array([5, 4, 8])"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 29,
    "id": "d1179ab2",
    "metadata": {},
    "outputs": [],
@@ -783,7 +717,7 @@
     "m1 = np.array([[6]])\n",
     "assert np.allclose(colgap(m1), np.array([0]))\n",
     "ret = colgap(m1)\n",
-    "assert type(ret) == np.ndarray\n",
+    "assert isinstance(ret, np.ndarray)\n",
     "\n",
     "m2 = np.array([[6, 8]])\n",
     "assert np.allclose(colgap(m2), np.array([0, 0]))\n",
@@ -841,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 31,
    "id": "fb440470",
    "metadata": {},
    "outputs": [
@@ -855,7 +789,7 @@
        "       [8, 7, 9]])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 32,
    "id": "5f7234dc",
    "metadata": {},
    "outputs": [],
@@ -885,7 +819,7 @@
     "substmax(m1)\n",
     "assert np.allclose(m1, np.array([6]))\n",
     "ret = substmax(m1)\n",
-    "assert ret == None  # returns nothing!\n",
+    "assert ret is None  # returns nothing!\n",
     "\n",
     "m2 = np.array([[6, 8]])\n",
     "substmax(m2)\n",
@@ -986,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 34,
    "id": "b3700a13",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 36,
    "id": "8252729c",
    "metadata": {},
    "outputs": [
@@ -1041,7 +975,7 @@
        "       [0., 1., 2., 3., 4., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,13 +986,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 37,
    "id": "e8d982f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "assert np.allclose(downup(2, 2), np.array([[0.0, 0.0], [0.0, 0.0]]))\n",
-    "assert type(downup(2, 2)) == np.ndarray\n",
+    "assert isinstance(downup(2, 2), np.ndarray)\n",
     "\n",
     "assert np.allclose(\n",
     "    downup(2, 6),\n",
@@ -1109,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 38,
    "id": "39fd832d",
    "metadata": {},
    "outputs": [],
@@ -1143,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 39,
    "id": "68c1bcb8",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1087,7 @@
        "array([6., 3., 4., 2., 4., 5., 3., 9., 7.])"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,18 +1108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 40,
    "id": "bae14b36",
    "metadata": {},
    "outputs": [],
    "source": [
     "m1 = np.array([[7]])\n",
     "assert np.allclose(stairsteps(m1), np.array([7]))\n",
-    "assert type(m1) == np.ndarray\n",
+    "assert isinstance(m1, np.ndarray)\n",
     "\n",
     "m2 = np.array([[6, 8], [9, 3]])\n",
     "assert np.allclose(stairsteps(m2), np.array([6, 8, 3]))\n",
-    "assert type(m1) == np.ndarray\n",
+    "assert isinstance(m1, np.ndarray)\n",
     "\n",
     "m3 = np.array(\n",
     "    [\n",
@@ -1218,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 55,
    "id": "79f6acd0",
    "metadata": {},
    "outputs": [],
@@ -1227,7 +1161,7 @@
     "assert np.allclose(vertstairs(1, 2), np.array([[1, 1]]))\n",
     "assert np.allclose(vertstairs(2, 1), np.array([[1], [2]]))\n",
     "assert np.allclose(vertstairs(2, 2), np.array([[1, 2], [2, 1]]))\n",
-    "assert type(vertstairs(2, 2)) == np.ndarray\n",
+    "assert isinstance(vertstairs(2, 2), np.ndarray)\n",
     "assert np.allclose(\n",
     "    vertstairs(4, 5),\n",
     "    np.array([[1, 4, 1, 4, 1], [2, 3, 2, 3, 2], [3, 2, 3, 2, 3], [4, 1, 4, 1, 4]]),\n",
@@ -1268,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 44,
    "id": "4ab01830",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1216,7 @@
        "       [ 9,  7,  7]])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,14 +1236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 56,
    "id": "4ef6606e",
    "metadata": {},
    "outputs": [],
    "source": [
     "m1 = [[7, 9]]\n",
     "res = comprescol(np.array(m1))\n",
-    "assert type(res) == np.ndarray\n",
+    "assert isinstance(res, np.ndarray)\n",
     "assert np.allclose(res, np.array([[16]]))\n",
     "\n",
     "m2 = np.array([[5, 8], [7, 2]])\n",
@@ -1354,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 47,
    "id": "65c271a5",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1302,7 @@
        "       [2, 3, 9, 7, 2]])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 48,
    "id": "da982024",
    "metadata": {},
    "outputs": [],
@@ -1448,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 50,
    "id": "11f71947",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1392,7 @@
        "array([4., 3., 8., 5., 2., 7., 3., 8., 4., 6., 5., 7.])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 51,
    "id": "9eefb5ab",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 53,
    "id": "bbb48ee4",
    "metadata": {},
    "outputs": [
@@ -1536,7 +1470,7 @@
        "array([5., 1., 6., 5., 2., 7., 3., 8., 4., 2., 8., 5.])"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 54,
    "id": "0dd28583",
    "metadata": {},
    "outputs": [],
